mainapp/manifests/standalone/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hy-kube-mainapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hy-kube-mainapp
  template:
    metadata:
      labels:
        app: hy-kube-mainapp
    spec:
      volumes:
        - name: timestamps-volume
          emptyDir: {}
      containers:
        - name: hy-kube-mainapp-reader
          image: tkasu/hy-kube-mainapp-reader:ex1.10
          imagePullPolicy: Always
          volumeMounts:
            - name: timestamps-volume
              mountPath: /usr/app/files
        - name: hy-kube-mainapp-writer
          image: tkasu/hy-kube-mainapp-writer:ex1.10
          imagePullPolicy: Always
          volumeMounts:
            - name: timestamps-volume
              mountPath: /usr/app/files
