mainapp/manifests/standalone/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hy-kube-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hy-kube-mainapp-svc
                port:
                  number: 2345
